# CROWN

./: CMakeLists.txt  README.md  init.sh
code_generation/: analysis_template.cxx
data/jsonpog-integration-beforeCorr/: .sync-commit
hmm/: btag_variations.py  fatjet_variations.py  generate.py  jet_variations.py  vhmm_config.py
hmm/producers/: cr.py  electrons.py  event.py  fatjets.py  genparticles.py  jets.py  lepton.py  muons.py  p4.py  scalefactors.py  triggers.py
hmm/quantities/: nanoAOD.py  output.py
include/: basefunctions.hxx  jets.hxx  physicsobjects.hxx  quantities.hxx  scalefactors.hxx  triggers.hxx
sample_database/: check.py  datasets.yaml  datasets2016postVFP.yaml  datasets2016preVFP.yaml  datasets2017.yaml  datasets2018.yaml  datasets2022postEE.yaml  datasets2022preEE.yaml  datasets2023postBPix.yaml  datasets2023preBPix.yaml  run.sh
sample_database/2016postVFP/data/: SingleMuon_Run2016F-UL2016.yaml  SingleMuon_Run2016G-UL2016.yaml  SingleMuon_Run2016H-UL2016.yaml
sample_database/2016postVFP/diboson/: GluGluToContinToZZTo2e2mu_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  GluGluToContinToZZTo2e2tau_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  GluGluToContinToZZTo2mu2nu_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  GluGluToContinToZZTo2mu2tau_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  GluGluToContinToZZTo4mu_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  GluGluToContinToZZTo4tau_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  WWTo2L2Nu_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  WZTo2Q2L_mllmin4p0_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  WZTo3LNu_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  ZZTo2L2Nu_TuneCP5_13TeV_powheg_pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  ZZTo2Q2L_mllmin4p0_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  ZZTo4L_TuneCP5_13TeV_powheg_pythia8_RunIISummer20UL16NanoAODv9-106X.yaml
sample_database/2016postVFP/dyjets/: DYJetsToLL_LHEFilterPtZ-0To50_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  DYJetsToLL_LHEFilterPtZ-100To250_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  DYJetsToLL_LHEFilterPtZ-250To400_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  DYJetsToLL_LHEFilterPtZ-400To650_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  DYJetsToLL_LHEFilterPtZ-50To100_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  DYJetsToLL_LHEFilterPtZ-650ToInf_MatchEWPDG20_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml
sample_database/2016postVFP/top/: ST_tW_antitop_5f_inclusiveDecays_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  ST_tW_top_5f_inclusiveDecays_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  TTTo2L2Nu_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml
sample_database/2016postVFP/triboson/: WWW_4F_TuneCP5_13TeV-amcatnlo-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  WWZ_4F_TuneCP5_13TeV-amcatnlo-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  WZZ_TuneCP5_13TeV-amcatnlo-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  ZZZ_TuneCP5_13TeV-amcatnlo-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml
sample_database/2016postVFP/vhmm/: WminusHToMuMu_M125_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  WplusHToMuMu_M125_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  WplusHToMuMu_M125_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml  ZHToMuMu_M125_CP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  ZHToMuMu_M125_CP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODv9-106X.yaml
sample_database/2016preVFP/data/: Run2016B-ver1_HIPM_UL2016.yaml  SingleMuon_Run2016B-ver1_HIPM_UL2016.yaml  SingleMuon_Run2016B-ver2_HIPM_UL2016.yaml  SingleMuon_Run2016C-HIPM_UL2016.yaml  SingleMuon_Run2016D-HIPM_UL2016.yaml  SingleMuon_Run2016E-HIPM_UL2016.yaml  SingleMuon_Run2016F-HIPM_UL2016.yaml
sample_database/2016preVFP/diboson/: GluGluToContinToZZTo2e2mu_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  GluGluToContinToZZTo2e2tau_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  GluGluToContinToZZTo2mu2nu_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  GluGluToContinToZZTo2mu2tau_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  GluGluToContinToZZTo4mu_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  GluGluToContinToZZTo4tau_TuneCP5_13TeV-mcfm701-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  WWTo2L2Nu_TuneCP5_13TeV-powheg-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  WZTo2Q2L_mllmin4p0_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  WZTo3LNu_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  ZZTo2L2Nu_TuneCP5_13TeV_powheg_pythia8_RunIISummer20UL16NanoAODAPVv9-106X.yaml  (+2 more)
sample_database/2017/data/: SingleMuon_Run2017B-UL2017.yaml  (+4 more)
sample_database/Hmm_input_list/: 2016postVFP_data.txt  2016postVFP_diboson.txt  2016postVFP_dyjets.txt  2016postVFP_top.txt  2016postVFP_triboson.txt  2016postVFP_vhmm.txt  2016preVFP_data.txt  2016preVFP_diboson.txt  2016preVFP_dyjets.txt  2016preVFP_top.txt  2016preVFP_triboson.txt  2016preVFP_vhmm.txt  2017_data.txt  2017_diboson.txt  2017_dyjets.txt  2017_top.txt  2017_triboson.txt  2017_vhmm.txt  2018_diboson.txt  2018_dyjets.txt  2018_top.txt  2018_triboson.txt  2022postEE_data.txt  2022postEE_diboson.txt  2022postEE_dyjets.txt  2022postEE_top.txt  2022preEE_data.txt  2022preEE_diboson.txt  2022preEE_dyjets.txt  2022preEE_top.txt
src/: jets.cxx  physicsobjects.cxx  quantities.cxx  scalefactors.cxx  triggers.cxx
(+334 files in other folders)
